# RouterDC

./: AGENTS.md  CLAUDE.md  pyproject.toml
data/: final_test_nq.parquet  final_test_popqa.parquet
